@@ -4,9 +4,12 @@ import com.ccapp.ccgo.user.User;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @Getter
 public class LoginUserDetails implements UserDetails {
@@ -20,7 +23,11 @@ public class LoginUserDetails implements UserDetails {
     // ✅ 기본 권한 비워둠 (나중에 ROLE_ 추가 가능)
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        if (user.getRole() == null) {
+            return Collections.emptyList();
+        }
+        String roleName = user.getRole().name(); // enum 이름 기반 권한
+        return List.of(new SimpleGrantedAuthority(roleName));
     }
 
     // ✅ 로그인 시 사용할 비밀번호
@@ -40,4 +47,5 @@ public class LoginUserDetails implements UserDetails {
     @Override public boolean isAccountNonLocked()      { return true; }
     @Override public boolean isCredentialsNonExpired() { return true; }
     @Override public boolean isEnabled()               { return true; }
+
 }
